ingredients selection, total price and display in page

--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
                 <ul>
                     <li>
                         <img src="img/cheese.svg" alt="">
-                        <input type="checkbox" data-price="2">
+                        <input class="whichIngr" type="checkbox" name="cheese" data-cost="2">
                         Cheese
                     </li>
 
                     <li>
                         <img src="img/fried-egg.svg" alt="">
-                        <input type="checkbox" data-price="3">
+                        <input class="whichIngr" type="checkbox" name="egg" data-cost="3">
                         Egg
                     </li>
 
                     <li>
                         <img src="img/mustard.svg" alt="">
-                        <input type="checkbox" data-price="1">
+                        <input class="whichIngr" type="checkbox" name="mustard" data-cost="1">
                         Mustard
                     </li>
 
                     <li>
                         <img src="img/tomato.svg" alt="">
-                        <input type="checkbox" data-price="2">
+                        <input class="whichIngr" type="checkbox" name="tomato" data-cost="2">
                         Tomato
                     </li>
 
                     <li>
                         <img src="img/lettuce.svg" alt="">
-                        <input type="checkbox" data-price="1">
+                        <input class="whichIngr" type="checkbox" name="lettuce" data-cost="1">
                         Lettuce
                     </li>
 
                     <li>
                         <img src="img/ketchup.svg" alt="">
-                        <input type="checkbox" data-price="1">
+                        <input class="whichIngr" type="checkbox" name="ketchup" data-cost="1">
                         Ketchup
                     </li>
                 </ul>
@@ -93,7 +93,7 @@
                     &euro;
                 </span>
                 <!-- print calc price -->
-                <span>
+                <span id="yourPrice">
 
                 </span>
             </div>
