check for matching coupon and apply discount

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- coupon input label -->
                 <label for="couponInput">Discount coupon</label>
                 <!-- coupon input -->
-                <input name="couponInput" type="text" placeholder="Coupon">
+                <input id="couponInput" name="couponInput" type="text" placeholder="Coupon">
             </section>
 
             <!-- CALCULATE SECTION -->
