click everywhere on list obj to toggle/untoggle checkbox

--- a/index.html
+++ b/index.html
@@ -86,23 +86,26 @@
         <!-- FOOTER -->
         <footer>
             <div>
-                Your Price
+                <span id="changeFooterWrite">
+                Starting price
+                </span>
+                <a id="burgerNameFooter" href="#">
+                </a>
             </div>
-            <div>
+             <div>
                 <span>
                     &euro;
                 </span>
                 <!-- print calc price -->
                 <span id="yourPrice">
-
+                    10
                 </span>
             </div>
         </footer>
 
     </div>
 
-
-    
+    <!-- JS -->
     <script src="js/script.js"></script>
 </body>
 </html>
